--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -12,6 +12,7 @@ body {
 }
 
 main {
+  position: relative;
   background-color: #000;
   padding: 2rem 1rem;
 
@@ -22,11 +23,19 @@ main {
 #display {
   all: unset;
   width: 100%;
-  /* max-height: 6em; */
-  margin-bottom: 1em;
+  position: relative;
+  margin-bottom: 1rem;
+  margin-top: 0.5rem;
   font-size: 3rem;
   text-align: right;
   color: #fff;
+}
+
+.previous-equation {
+  color: #fff;
+  position: absolute;
+  right: 1rem;
+  letter-spacing: 0.15rem;
 }
 
 .btn {
